swagger documentation done for v0.2.0
